# conformalized-sketching

./: pyproject.toml  requirements.txt  setup.cfg  setup.py
cms/: bootstrap.py  cms.py  conformal.py  data.py
experiments/: experiment_utils.py  new_experiment.py  run_new_experiment_parallel.sh
src/cms/: bootstrap.py  conformal.py  diagnostics.py
