[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "cms"
description = "Count-Min Sketcing"
requires-python = ">=3.9"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Matteo Sesia, Mario Beraha", email = "berahamario@gmail.com"}
]
dependencies = [ 
  "matplotlib>=3.7.1",
  "methodtools>=0.4.7",
  "mmh3>=3.0.0",
  "numpy>=1.24.4",
  "pandas>=1.5.3",
  "scikit-learn>=1.3.0",
  "scipy>=1.10.1",
  "tqdm>=4.65.0"
]