[metadata]
name                          = conformalized-sketching
version                       = 0.0.1
license                       = Apache 2.0
license_files                 = LICENSE
author                        = Matteo Sesia, Mario Beraha
author_email                  = berahamario@gmail.com
description                   = Messing around with sketches and conformal inference
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/mberaha/conformalized-sketching.git
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6